--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "bootstrap-sass": "^3.3.7",
+    "bootstrap-sass-grid": "^4.0.1",
+    "owl.carousel": "^2.2.1"
   }
 }
