--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.2.0",
+    "gulp-main-bower-files": "^1.6.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglifyjs": "^0.6.2",
     "imagemin-pngquant": "^5.0.0"
+  },
+  "dependencies": {
+    "normalize-scss": "^6.0.0",
+    "owl.carousel": "^2.2.0"
   }
 }
