--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery": "^3.2.1",
     "bootstrap-sass": "^3.3.7",
     "bootstrap-sass-grid": "^4.0.1",
-    "owl.carousel": "^2.2.1"
+    "owl.carousel": "^2.2.1",
+    "matchHeight": "matchheight#^0.7.2"
   }
 }
